microservices-ecommerce-project/k8s/base/inventory-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: ecommerce
spec:
  selector:
    app: inventory-service
  ports:
  - port: 8005
    targetPort: 8005
    protocol: TCP
  type: ClusterIP
